--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,25 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=floralstudio
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
   jpa:
+    hibernate:
+      ddl-auto: none
     properties:
       hibernate:
-        default_schema: floralstudio
+        format_sql: true;
+        default_schema: pchysioterapist
+    show-sql: true
   flyway:
+    enabled: true
     baseline-on-migrate: true
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
     user: postgres
     password: password
-    schemas: floralstudio
-
+    schemas: pchysioterapist
+    locations: classpath:db/migration
 server:
   port: 8080
