--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true;
@@ -14,7 +14,7 @@ spring:
     show-sql: true
   flyway:
     enabled: true
-    baseline-on-migrate: true
+    baseline-on-migrate: false
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/postgres
     user: postgres
