--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,17 @@ spring:
     username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: projektinzynierski13102023@gmail.com
+    password: tznl vnrt nxnr ayxw
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enabled: true
   jpa:
     hibernate:
       ddl-auto: update
