--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
           starttls:
             enabled: true
   jpa:
-    hibernate:
-      ddl-auto: update
+#    hibernate:
+#      ddl-auto: update
     properties:
       hibernate:
         default_schema: pchysioterapist
