refactor dla emailu dodano opcje CHANGE

--- a/src/main/resources/application-email.properties
+++ b/src/main/resources/application-email.properties
@@ -1,5 +1,6 @@
 email.acceptation=Zaakceptowano Twoja wizte
 email.rejection=Niestety musielismy anulowac Twoja wizyte
+email.change=Zmieniono Twoja wizyte
 email.default.description=blablaba
 email.default.reject.description=reject
 email.default.accept.description=accept
